deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clothing
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
      version: blue
  template:
    metadata:
      labels:
        app: app
        version: blue
    spec:
      imagePullSecrets:
      - name: secrets
      containers:
      - name: website
        image: yekqpapp4q/ecommerce:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 80

---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: app
    version: green
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
